fix adverts title overflow on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -376,6 +376,7 @@ body {
     .adverts-title {
         width: 20%;
         padding: 1.5%;
+        font-size: 3vw;
     }
 
     .adverts-content {
